Passo 5: Exemplo de @Observes (evento)

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -8,7 +8,7 @@
     <h:body>
         <h:form>
             <h:commandButton action="#{carro.especificao()}" value="Busca carro" />
-
+            <h:commandButton action="#{carro.viajar()}" value="Viajar" />
         </h:form>
     </h:body>
 </html>
